refactor,feat: [infinispan] infinispan, config core refactoring